cmake_minimum_required(VERSION 2.8)
project( image_mosaic )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_definitions(-DOPENCV_ENABLE_NONFREE)
add_executable( image_mosaic image_mosaic.cpp )
add_executable( image_mosaic_stitch stitch_test.cpp)
target_link_libraries( image_mosaic ${OpenCV_LIBS} )
target_link_libraries( image_mosaic_stitch ${OpenCV_LIBS} )
